Comment finished for the last part of Part two

--- a/p8105_hw1_wz2675.md
+++ b/p8105_hw1_wz2675.md
@@ -55,13 +55,13 @@ Now trying to calculate the mean of each variables in the data frame.
 mean(pull(p2_df, 1))
 ```
 
-    ## [1] 0.04232601
+    ## [1] 0.2319551
 
 ``` r
 mean(pull(p2_df, 2))
 ```
 
-    ## [1] 0.6
+    ## [1] 0.5
 
 ``` r
 mean(pull(p2_df, 3))
@@ -81,15 +81,23 @@ mean(pull(p2_df, 4))
 
     ## [1] NA
 
-We noticed that only numeric and logical vectors are able to have
+We noticed that only numeric and logical variables are able to have
 numeric means, which only the first columns got a result. The character
-and factor vector are not able to have means.
+and factor variables are not able to have means.
 
-Now we turn the logical, character, and factor vectors into numeric to
-see if they can have mean
+Now we turn the logical, character, and factor variables into numeric to
+see if they can have mean:
 
 ``` r
 num_log = as.numeric(pull(p2_df, 2))
 num_chr = as.numeric(pull(p2_df, 3))
 num_fac = as.numeric(pull(p2_df, 4))
 ```
+
+After applying the `as.numeric` function, we see that the logical and
+factor variable can be transformed into numeric value where character
+variable still cannot be transformed. Moreover, although factor
+variables have numeric values, it cannot be used to calculate mean since
+the numeric value only represents different levels of the original
+variable. Thus, all these results shows that only numeric and logical
+variables can have a mean from the data frame.
