--- a/p8105_hw1_wz2675.md
+++ b/p8105_hw1_wz2675.md
@@ -3,6 +3,27 @@ p8105_hw1_wz2675
 Wenyu Zhang
 2023-09-14
 
+``` r
+knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+```
+
+    ## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
+    ## ✔ dplyr     1.1.3     ✔ readr     2.1.4
+    ## ✔ forcats   1.0.0     ✔ stringr   1.5.0
+    ## ✔ ggplot2   3.4.3     ✔ tibble    3.2.1
+    ## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
+    ## ✔ purrr     1.0.2     
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+    ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
+
+``` r
+library(moderndive)
+data("early_january_weather")
+```
+
 # Problem 1
 
 ## Part 1
@@ -10,9 +31,12 @@ Wenyu Zhang
 Inside the dataset `early_january_weather`, there are 15 variables
 including “origin, year, month, day, hour, temp, dewp, humid, wind_dir,
 wind_speed, wind_gust, precip, pressure, visib, time_hour” with 358
-observations. Among all the variables, we focusing on the `temperature`
-variable inside the dataset. We noticed that the mean temperature in
-this data set is 39.5821229 degrees Fahrenheit.
+observations. Among all the variables, I noticed that the variable
+“wind_gust” have many values of “NA”, this might due to loss of the data
+in most of the time and we need to omit those NA values when we want to
+find a pattern regarding this variable. Moving on, we noticed that the
+mean temperature in this data set is 39.5821229 degrees Fahrenheit using
+variables `temp` to get the answer.
 
 ## Part 2
 
@@ -55,13 +79,13 @@ Now trying to calculate the mean of each variables in the data frame.
 mean(pull(p2_df, 1))
 ```
 
-    ## [1] 0.2319551
+    ## [1] -0.3110556
 
 ``` r
 mean(pull(p2_df, 2))
 ```
 
-    ## [1] 0.5
+    ## [1] 0.3
 
 ``` r
 mean(pull(p2_df, 3))
